DBAU-395 updated file estructure
Cleaned files using folders and leave root with Index and Readme files

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="robots" content="noindex, nofollow">
-  <meta name="googlebot" content="noindex, nofollow">
-  <script type="text/javascript" src="jquery-1.11.1.js"></script>
-<link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="robots" content="noindex, nofollow">
+<meta name="googlebot" content="noindex, nofollow">
+  
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+
+<script type="text/javascript" src="assets/js/jquery-1.11.1.js"></script>  
+<link rel="stylesheet" type="text/css" media="screen" href="assets/css/stylesheet.css">
 
 <!-- Style and JS for Date picker -->
-<link rel="stylesheet" type="text/css" media="screen" href="date-time-picker.css">
-<script src="http://code.jquery.com/jquery.min.js"></script>
-<script src="./date-time-picker.min.js"></script>
+<link rel="stylesheet" type="text/css" media="screen" href="assets/css/date-time-picker.css">
+<script src="assets/js/date-time-picker.min.js"></script>
 
 <!-- next three are for the searchable dropdown -->
 <!-- <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-<link rel="stylesheet" type="text/css" href="./jquery.dropdown.min.css">
-<script src="./jquery.dropdown.js"></script>
+<link rel="stylesheet" type="text/css" href="assets/css/jquery.dropdown.min.css">
+<script src="assets/js/jquery.dropdown.js"></script>
 
   <style type="text/css">
     .alert {
@@ -1478,8 +1482,8 @@ $(window).load(function(){
     </div>
 </div>
 <!--searchable dropdown code, based on https://janking.github.io/dropdown/ -->
-<script src="campaign.js"></script>
-<script src="audience.js"></script>
+<script src="assets/js/campaign.js"></script>
+<script src="assets/js/audience.js"></script>
 <script>
 	function updateOutput()
         {
