DBAU-395 bug fix for utm_term
I updated the if statement to run more specific for the email "community Educarion and Red cross Training" to avoid the _ for disappearing on main dropdown "What are you making a tracked link for?" changes.

--- a/index.html
+++ b/index.html
@@ -1757,9 +1757,13 @@ $(window).load(function(){
 			sourceCode = encodeURIComponent(sourceCode);
 		};
        	if (audience && medium !== "Referral" && medium !== "Internal") {
-       		// Remove _ for Email for Red Cross Training and Community Education
-       		if ($("#emailsendname").val() === "Red Cross Training" || $("#emailsendname").val() === "Community Education") {
-       			var html = html + audience;
+       		if (medium == "Email") {
+	       		// Remove _ for Email for Red Cross Training and Community Education
+	       		if ($("#emailsendname").val() === "Red Cross Training" || $("#emailsendname").val() === "Community Education") {
+	       			var html = html + audience;
+	       		} else {
+	       			var html = html + '_'+ audience;
+	       		}
        		} else {
        			var html = html + '_'+ audience;
        		}
